[tool.poetry]
name = "piedpiper"
version = "0.1.0"
description = ""
authors = ["GRAFMONTECRISTO <lesha@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
aiosqlite = "^0.19.0"
fastapi-users = {extras = ["sqlalchemy2"], version = "^12.0.0"}
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-telegram-bot = "^20.4"
html-parser = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "main_service.main:app"